--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,7 +19,7 @@
     <script src="https://use.fontawesome.com/f2b29d30d8.js"></script>
 
   </head>
-  <body onload="canvasDraw()">
+  <body onload="loadSite()">
     <%= yield %>
   </body>
 </html>
