Added new project: CuteElephants.net

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -91,6 +91,18 @@
             .card
               .card-image
                 %figure.image.is-4by2
+                  %img{:src=>"images/cute-elephant-splash.png"}
+              .card-content
+                %p.title Cute Elephants
+                %p.subtitle
+                  %a.has-text-primary{:href=>"http://www.cuteelephants.net", :target=>"_blank"}www.cuteelephants.net
+                %p
+                  A simple website using FLickr's API to find cute elephant pictures at the touch of a button.
+                  Styled with Bulma and deployed using Middleman.
+          .column
+            .card
+              .card-image
+                %figure.image.is-4by2
                   %img{:src=>"images/lasersharks.jpg"}
               .card-content
                 %p.title Laser Sharks
