Updated project section formatting,

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -67,7 +67,7 @@
           %a.has-text-primary{:href=>"http://github.com/thegoobs", :target=>"_blank"}
             %strong.has-text-primary Github
           to see what I've been working on.
-        .columns.is-desktop.is-multiline
+        .columns.is-fullhd.is-multiline
           .column
             .card
               .card-image
@@ -99,6 +99,7 @@
                 %p
                   A simple website using FLickr's API to find cute elephant pictures at the touch of a button.
                   Styled with Bulma and deployed using Middleman.
+        .columns.is-desktop.is-multiline
           .column
             .card
               .card-image
