Updated some projects and wording

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -66,8 +66,11 @@
           Check out my
           %a.has-text-primary{:href=>"http://github.com/thegoobs", :target=>"_blank"}
             %strong.has-text-primary Github
+          and
+          %a.has-text-primary{:href=>"http://codepen.io/guthrieschoolar", :target=>"_blank"}
+            %strong.has-text-primary CodePen
           to see what I've been working on.
-        .columns.is-fullhd.is-multiline
+        .columns.is-desktop.is-multiline
           .column
             .card
               .card-image
@@ -87,6 +90,7 @@
                   Built in Lua with Corona SDK. Clear number tiles in
                   a 5x5 grid by adding them up, and destroy them if the
                   sum is zero.
+        .columns.is-desktop.is-multiline
           .column
             .card
               .card-image
@@ -99,6 +103,19 @@
                 %p
                   A simple website using FLickr's API to find cute elephant pictures at the touch of a button.
                   Styled with Bulma and deployed using Middleman.
+          .column
+            .card
+              .card-image
+                %figure.image.is-4by2
+                  %img{:src=>"images/budgetish.png"}
+              .card-content
+                %p.title Budget(ish)
+                %p.subtitle Ruby on Rails budgeting application
+                %p.subtitle
+                  %a.has-text-primary{:href=>"http://budget-ish.herokuapp.com", :target=>"_blank"}
+                    http://budget-ish.heroku-app.com
+                %p
+                  Lead developer of a multidisciplinary team, simple budgeting app that utilized UX/UI practices and agile methodology. Simple budgeting application targetting novice budgeters and college students with irregular income.
         .columns.is-desktop.is-multiline
           .column
             .card
@@ -152,10 +169,12 @@
               Orientation Leader and the Vice President of a student Organization that connected programmers and designers together to make websites and other neat projects.
               %br/
               %br/
-              I'm originally from Austin Tx, which basically means I'm a cowboy and I bleed queso.
+              Originally from Austin Tx, I'm currently living in the DFW area.
+              %br/
               %br/
               My hobbies include playing video games and
               making music with my brothers.
+              %br/
               %br/
               The woman in the picture with me is my wonderful girlfriend,
               Briana. She has supported me unconditionally through everything
